--- a/xiaomi_finance/index.css
+++ b/xiaomi_finance/index.css
@@ -68,24 +68,116 @@ nav .title .describe{
 }
 .nav-list {
     float:right;
-    margin-top: 36px;
+    margin-top: 29px;
     margin-right: -23px;
 }
 .nav-list .nav-item{
     float: left;
     padding: 0 23px;
+    position:relative;
+}
+.nav-list .sub-toggle {
+    padding-bottom: 20px;
+}
+.nav-list .sub-toggle:hover + .sub-list{
+    display: block;
 }
 /* nav li:last-child{
     padding-right: 0;
 } */
 .nav-list .sub-list{
     background: #fff;
+    width: 150px;
+    height: 80px;
+    padding: 10px 0;
+    border: 1px solid #e5e5e5;
+    position: absolute;
+    left: -31px;
+    top: 47px;
+    display: none;
+    border-radius: 2px;
+}
+.nav-list .sub-list:hover{
+    display: block;
+}
+.nav-list .sub-list::before{
+    content: '';
+    display: block;
+    width: 8px;
+    height: 8px;
+    background: #fff;
+    border: 1px solid #e5e5e5;
+    transform: rotate(45deg);
+    position: absolute;
+    top: -5px;
+    left: 72px;
+    border-bottom: transparent;
+    border-right: transparent;
+}
+.nav-list .sub-list a{
+    font-size: 16px;
+}
+nav .sub-link:hover{
+    background: #eee;
 }
 nav a{
     color: #212121;
     font-size: 18px;
+    display:inline-block;
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
 }
 nav a:hover{
     color:#e94400;
 }
 /* nav结束 */
+
+/* banner开始 */
+#banner{
+    height: 860px;
+    background:url(./images/bg2.jpeg) center;
+    text-align: center;
+}
+/* #banner img{
+    display: inline-block;
+    width: 1400px;
+    height: 840px;
+    
+} */
+#banner h2{
+    font-size: 64px;
+    color: #fff;
+    font-weight: 300;
+    padding-top:  383px;
+}
+#banner button{
+    color: #fff;
+    font-size: 24px;
+    background: #F93F2B;
+    width: 260px;
+    height: 60px;
+    line-height: 60px;
+    border-radius: 5px;
+    /* 可以去掉按钮默认的边框 */
+    border:none;  
+    margin-top: 36px;
+    outline: none;
+}
+#banner button:hover{
+    background: #af2819;
+    cursor: pointer;
+}
+
+/* banner结束 */
+
+/* main开始*/
+
+main .wrapper{
+    height: 469px;
+    border: 1px solid #e6e6e6;
+    margin-top: -80px;
+    background: #fff;
+}
+/* main结束 */
